<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.AddStoryActivity">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera" />


    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/cb_upload_location"
        app:layout_constraintStart_toStartOf="@+id/tv_currentLocation"
        app:layout_constraintTop_toBottomOf="@+id/cb_upload_location" />

    <ProgressBar
        android:id="@+id/progrerss_bar_add"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/cb_upload_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_currentLocation"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <TextView
        android:id="@+id/tv_currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:text="@string/upload_location"
        app:layout_constraintEnd_toStartOf="@+id/cb_upload_location"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />


</androidx.constraintlayout.widget.ConstraintLayout>