<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvLogin"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.storyapp.views.EmailEditText
        android:id="@+id/ed_login_email"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin" />

    <com.example.storyapp.views.PasswordEditText
        android:id="@+id/ed_login_password"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/ed_login_email"
        app:layout_constraintStart_toStartOf="@+id/ed_login_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <Button
        android:id="@+id/btn_login"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/btn_move_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <Button
        android:id="@+id/btn_move_register"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

    <ProgressBar
        android:id="@+id/progrerss_bar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>