...
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">No Data</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="add_story">Add Story</string>
    <string name="settings">Settings</string>
    <string name="email_invalid">Invalid email address</string>
    <string name="password_invalid">Password must be at least 8 characters</string>
    <string name="login_wrong">Wrong email or password</string>
    <string name="auth_invalid">Invalid email or password</string>
...
